--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,8 @@
     "react-highlight": "^0.15.0",
     "react-icons": "^4.8.0",
     "tinycolor2": "^1.6.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@mirrorful/eslint-config": "file:../eslint-config",
