--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^10.6.0",
     "json5": "^2.2.3",
     "lottie-react": "^2.4.0",
+    "next": "^13.2.4",
     "posthog-js": "^1.51.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
