added prettier end of line

--- a/packages/mirrorful/editor/.eslintrc.json
+++ b/packages/mirrorful/editor/.eslintrc.json
@@ -21,6 +21,12 @@
     "react/react-in-jsx-scope": "off",
     "react/display-name": "off",
     "@typescript-eslint/no-unused-vars": "warn",
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
