updated mirrorful to latest verion on examples

--- a/examples/tailwind-next/.mirrorful/store/config.json
+++ b/examples/tailwind-next/.mirrorful/store/config.json
@@ -86,9 +86,17 @@
 			]
 		}
 	},
+	"files": [
+		"css",
+		"scss",
+		"js",
+		"cjs",
+		"ts",
+		"json"
+	],
 	"__internal__": {
 		"migrations": {
-			"version": "0.0.3"
+			"version": "0.0.5"
 		}
 	}
 }
