--- a/examples/nuxt-3/.mirrorful/store/config.json
+++ b/examples/nuxt-3/.mirrorful/store/config.json
@@ -22,11 +22,38 @@
 					"500": "#171717"
 				}
 			}
-		]
+		],
+		"typography": {
+			"fontSizes": [
+				{
+					"value": 1,
+					"unit": "rem",
+					"name": "sm"
+				},
+				{
+					"value": 1.2,
+					"unit": "rem",
+					"name": "md"
+				},
+				{
+					"value": 1.4,
+					"unit": "rem",
+					"name": "lg"
+				}
+			]
+		}
 	},
+	"files": [
+		"css",
+		"scss",
+		"js",
+		"cjs",
+		"ts",
+		"json"
+	],
 	"__internal__": {
 		"migrations": {
-			"version": "0.0.2"
+			"version": "0.0.5"
 		}
 	}
 }
