--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/color-picker": "^3.2.2",
+    "eslint-plugin-react": "^7.32.2",
     "framer-motion": "^10.6.0",
     "json5": "^2.2.3",
     "lottie-react": "^2.4.0",
