--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -28,12 +28,13 @@
     "eslint": "^8.36.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.6.0",
-    "next": "^13.0.0",
+    "next": "13.2.4",
     "posthog-js": "^1.50.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@mirrorful/eslint-config": "file:../../eslint-config",
