--- a/examples/create-react-app/src/.mirrorful/store/config.json
+++ b/examples/create-react-app/src/.mirrorful/store/config.json
@@ -1,44 +1,113 @@
 {
-	"tokens": {
-		"colorData": [
-			{
-				"name": "Secondary",
-				"baseColor": "#8b8787",
-				"variants": {
-					"500": "#8b8787"
-				}
-			},
-			{
-				"name": "Primary",
-				"baseColor": "#e30404",
-				"variants": {
-					"500": "#e30404"
-				}
-			}
-		],
-		"typography": {
-			"fontSizes": [
-				{
-					"value": 1,
-					"unit": "rem",
-					"name": "sm"
-				},
-				{
-					"value": 1.2,
-					"unit": "rem",
-					"name": "md"
-				},
-				{
-					"value": 1.4,
-					"unit": "rem",
-					"name": "lg"
-				}
-			]
-		}
-	},
-	"__internal__": {
-		"migrations": {
-			"version": "0.0.3"
-		}
-	}
+  "tokens": {
+    "colorData": [
+      {
+        "name": "Primary",
+        "baseColor": "#472887",
+        "variants": {
+          "50": "#9373d5",
+          "100": "#815bce",
+          "200": "#6e43c7",
+          "300": "#6036b6",
+          "400": "#532f9f",
+          "500": "#472887",
+          "600": "#3b216f",
+          "700": "#2e1a58",
+          "800": "#221340",
+          "900": "#150c29"
+        }
+      },
+      {
+        "name": "Vida Loca",
+        "baseColor": "#4f8728",
+        "variants": {
+          "50": "#9bd573",
+          "100": "#8ace5b",
+          "200": "#7ac743",
+          "300": "#6bb636",
+          "400": "#5d9f2f",
+          "500": "#4f8728",
+          "600": "#416f21",
+          "700": "#33581a",
+          "800": "#264013",
+          "900": "#18290c"
+        }
+      },
+      {
+        "name": "Sea Green",
+        "baseColor": "#288753",
+        "variants": {
+          "50": "#73d59f",
+          "100": "#5bce8f",
+          "200": "#43c77f",
+          "300": "#36b670",
+          "400": "#2f9f62",
+          "500": "#288753",
+          "600": "#216f44",
+          "700": "#1a5836",
+          "800": "#134027",
+          "900": "#0c2919"
+        }
+      },
+      {
+        "name": "Camelot",
+        "baseColor": "#872849",
+        "variants": {
+          "50": "#d57395",
+          "100": "#ce5b83",
+          "200": "#c74371",
+          "300": "#b63663",
+          "400": "#9f2f56",
+          "500": "#872849",
+          "600": "#6f213c",
+          "700": "#581a2f",
+          "800": "#401323",
+          "900": "#290c16"
+        }
+      }
+    ],
+    "typography": {
+      "fontSizes": [
+        {
+          "value": 1,
+          "unit": "rem",
+          "name": "sm"
+        },
+        {
+          "value": 1.2,
+          "unit": "rem",
+          "name": "md"
+        },
+        {
+          "value": 1.4,
+          "unit": "rem",
+          "name": "lg"
+        }
+      ]
+    },
+    "shadows": [
+      {
+        "name": "sm",
+        "value": "0 1px 2px 0 rgba(0, 0, 0, 0.05)"
+      },
+      {
+        "name": "md",
+        "value": "0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06)"
+      },
+      {
+        "name": "lg",
+        "value": "0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)"
+      },
+      {
+        "name": "dark-lg",
+        "value": "0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)"
+      }
+    ]
+  },
+  "files": ["css", "scss", "js", "cjs", "ts", "json"],
+  "__internal__": {
+    "migrations": {
+      "version": "0.0.5"
+    }
+  }
 }
