--- a/packages/mirrorful/editor/tsconfig.json
+++ b/packages/mirrorful/editor/tsconfig.json
@@ -21,6 +21,6 @@
     ],
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../../../typings/color-namer/color-namer.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
