--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "**/vendor": true,
     "**/lib": true,
     "**/.mirrorful": true,
-    "**/dist": true
+    "**/dist": true,
+    "**/yarn.lock": true
   },
   "cSpell.words": ["Mirrorful"],
   "editor.codeActionsOnSave": {
