--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrorful",
-  "version": "5.0.7",
+  "version": "6.1.6",
   "description": "Simple, open-source design system infrastructure.",
   "keywords": [
     "mirrorful",
@@ -21,9 +21,9 @@
     "local:win32": "(if exist dist rmdir /Q /S dist) && tsc --build && cross-env NODE_ENV=development node ./dist/cli/index.js",
     "local:default": "rm -rf ./dist && tsc --build && cross-env NODE_ENV=development node ./dist/cli/index.js",
     "prepub": "rm -rf ./dist; npm version patch; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..;",
-    "release:patch": "rm -rf ./dist; npm version patch; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm publish;",
-    "release:minor": "rm -rf ./dist; npm version minor; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm publish;",
-    "release:major": "rm -rf ./dist; npm version major; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm publish;",
+    "release:patch": "rm -rf ./dist && npm version patch && tsc --build && cd editor && yarn build && cd .next && rm -rf cache && cd ../.. && npm publish;",
+    "release:minor": "rm -rf ./dist && npm version minor && tsc --build && cd editor && yarn build && cd .next && rm -rf cache && cd ../.. && npm publish;",
+    "release:major": "rm -rf ./dist && npm version major && tsc --build && cd editor && yarn build && cd .next && rm -rf cache && cd ../.. && npm publish;",
     "testprod": "rm -rf ./dist; tsc --build; cd editor; yarn build; cd .next; rm -rf cache; cd ../..; npm link; echo '‼️ Now go to a test project and run npm link mirrorful; yarn run mirrorful'",
     "prepare": "cd .. && cd .. && husky install packages/mirrorful/.husky"
   },
@@ -57,7 +57,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^4.1.2",
-    "update-check": "^1.5.4"
+    "update-check": "^1.5.4",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/conf": "^3.0.0",
@@ -65,6 +67,7 @@
     "@types/node": "^18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
     "@types/uuidv4": "^5.0.0",
     "@types/validate-npm-package-name": "^4.0.0",
     "cross-env": "^7.0.3",
