Setting up react project for figma plugin

--- a/integrations/figma/mirrorful-plugin/tsconfig.json
+++ b/integrations/figma/mirrorful-plugin/tsconfig.json
@@ -2,8 +2,14 @@
   "compilerOptions": {
     "target": "es6",
     "outDir": "dist",
-    "lib": ["es6"],
-    "strict": true,
+    "jsx": "react",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "removeComments": true,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"]
   }
 }
