--- a/integrations/figma/mirrorful-plugin/manifest.json
+++ b/integrations/figma/mirrorful-plugin/manifest.json
@@ -1,11 +1,8 @@
 {
-  "name": "Mirrorful",
-  "id": "1227401303831519968",
+  "name": "Figma Plugin Template",
+  "id": "00000000",
   "api": "1.0.0",
-  "main": "code.js",
-  "capabilities": [],
-  "enableProposedApi": false,
-  "permissions": ["currentuser"],
-  "editorType": ["figma"],
-  "ui": "ui.html"
+  "main": "dist/code.js",
+  "ui": "dist/ui.html",
+  "editorType": ["figma", "figjam"]
 }
