Fix sanitize name bugs in onboarding + start components page (#311)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "**/dist": true,
     "**/yarn.lock": true
   },
-  "cSpell.words": ["Chakra", "Mirrorful"],
+  "cSpell.words": ["Mirrorful", "posthog", "Chakra"],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
