added styled-components example to ExportSuccessModal and example.mdx

--- a/examples/with-styled-components/.mirrorful/store/config.json
+++ b/examples/with-styled-components/.mirrorful/store/config.json
@@ -426,7 +426,7 @@
     }
   },
   "themes": [],
-  "files": ["ts", "json", "cjs", "js", "scss", "css"],
+  "files": ["ts", "css", "scss", "js", "cjs", "json"],
   "__internal__": {
     "migrations": {
       "version": "0.0.6"
