--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -4,6 +4,7 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
+  "ignorePatterns": ["*.js", "*.cjs", "src/api/generated"],
   "extends": ["@mirrorful/eslint-config"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
