--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -23,11 +23,10 @@ jobs:
         run: npm install -g fern-api
 
       - name: fern generate
-        with:
-          dir: server
-          cmd: fern generate # will run `yarn install` command in apps/web
-          env:
-            FERN_TOKEN: ${{ secrets.FERN_API_KEY }}
+        working-directory: ./server
+        run: fern generate
+        env:
+          FERN_TOKEN: ${{ secrets.FERN_API_KEY }}
 
       - name: install server
         uses: borales/actions-yarn@v4
@@ -41,7 +40,7 @@ jobs:
           dir: server
           cmd: build # will run `yarn build` command in apps/web
 
-      - name: lint apps/web
+      - name: lint server
         uses: borales/actions-yarn@v4
         with:
           dir: server
