--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Verify generated code is up to date
         working-directory: packages/server
         run: | 
-          fern generate # will run `yarn install` command in apps/web
+          fern generate
           git --no-pager diff --exit-code
         env:
           FERN_TOKEN: ${{ secrets.FERN_API_KEY }}
@@ -33,8 +33,8 @@ jobs:
       - name: install server
         uses: borales/actions-yarn@v4
         with:
-          dir: server
-          cmd: install # will run `yarn install` command in apps/web
+          dir: packages/server
+          cmd: install # will run `yarn install` command in packages/server
 
       - name: build server
         uses: borales/actions-yarn@v4
