Arbitrary Figma updates

--- a/integrations/figma/mirrorful-plugin/tsconfig.json
+++ b/integrations/figma/mirrorful-plugin/tsconfig.json
@@ -6,10 +6,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "removeComments": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"]
-  }
+  },
+  "noUnusedLocals": false
 }
