--- a/integrations/figma/mirrorful-plugin/manifest.json
+++ b/integrations/figma/mirrorful-plugin/manifest.json
@@ -1,8 +1,10 @@
 {
-  "name": "Figma Plugin Template",
-  "id": "00000000",
+  "name": "Mirrorful",
+  "id": "1227401303831519968",
   "api": "1.0.0",
   "main": "dist/code.js",
   "ui": "dist/ui.html",
-  "editorType": ["figma", "figjam"]
+  "editorType": ["figma"],
+  "enableProposedApi": false,
+  "permissions": ["currentuser"]
 }
