--- a/integrations/figma/mirrorful-plugin/package.json
+++ b/integrations/figma/mirrorful-plugin/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "figma-plugin-react-template",
+  "name": "mirrorful-figma-plugin",
   "version": "1.0.0",
   "description": "This plugin template uses Typescript. If you are familiar with Javascript, Typescript will look very familiar. In fact, valid Javascript code is already valid Typescript code.",
   "license": "ISC",
   "scripts": {
     "build": "webpack --mode=production",
     "build:watch": "webpack --mode=development --watch",
+    "serve": "webpack serve --mode=development",
     "prettier:format": "prettier --write '**/*.{js,jsx,ts,tsx,css,json}' "
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "framer-motion": "^10.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -33,7 +38,8 @@
     "typescript": "^4.7.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.13.2"
   },
   "husky": {
     "hooks": {
