--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -28,7 +28,7 @@
     "eslint": "^8.36.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.6.0",
-    "next": "^13.3.0",
+    "next": "13.2.4",
     "posthog-js": "^1.50.0",
     "prettier": "^2.8.4",
     "react": "18.2.0",
