--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -2,6 +2,10 @@
   "name": "@mirrorful/ui",
   "version": "1.0.0",
   "description": "",
+  "main": "src/index.ts",
+  "files": [
+    "src/**/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
