--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -12,6 +12,8 @@
   "author": "Mirrorful",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.18",
+    "@chakra-ui/react": "^2.5.5",
     "eslint-plugin-react": "^7.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
