--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -7,7 +7,9 @@
     "src/**/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "Mirrorful",
   "license": "MIT",
@@ -20,6 +22,16 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@storybook/addon-essentials": "7.0.4",
+    "@storybook/addon-interactions": "7.0.4",
+    "@storybook/addon-links": "7.0.4",
+    "@storybook/blocks": "7.0.4",
+    "@storybook/react": "7.0.4",
+    "@storybook/react-webpack5": "7.0.4",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "^18.0.35",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -28,8 +40,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-storybook": "^0.6.11",
     "prettier": "^2.8.7",
+    "prop-types": "15.8.1",
     "run-script-os": "^1.1.6",
+    "storybook": "7.0.4",
     "tsc-alias": "^1.8.5"
   }
 }
