--- a/packages/ui-library/tsconfig.json
+++ b/packages/ui-library/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "module": "CommonJS",
     "baseUrl": ".",
     "rootDir": "src",
@@ -17,7 +17,13 @@
     "declaration": true
   },
   "include": ["**/*.ts", "**/*.tsx", "src/**/*.json"],
-  "exclude": ["node_modules", "lib", "tsconfig.json"],
+  "exclude": [
+    "node_modules",
+    "lib",
+    "tsconfig.json",
+    "src/stories/**/*",
+    "src/.storybook/**/*"
+  ],
   "tsc-alias": {
     "verbose": true
   }
