--- a/packages/ui-library/tsconfig.json
+++ b/packages/ui-library/tsconfig.json
@@ -6,7 +6,7 @@
     "baseUrl": ".",
     "rootDir": "src",
     "paths": {
-      "@src/*": ["src/*"]
+      "@ui/*": ["src/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
