--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "eslint-plugin-react": "^7.32.2",
+    "mirrorful": "^6.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.0.4"
