--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
+    "@storybook/react": "^7.0.4",
     "eslint-plugin-react": "^7.32.2",
     "mirrorful": "^6.1.9",
     "react": "^18.2.0",
@@ -31,7 +32,6 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
-    "@chakra-ui/storybook-addon": "^4.0.16",
     "@storybook/addon-essentials": "7.0.4",
     "@storybook/addon-interactions": "7.0.4",
     "@storybook/addon-links": "7.0.4",
