--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@mirrorful/ui",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "src/index.ts",
   "files": [
-    "src/**/*"
+    "lib"
   ],
+  "publishConfig": {
+    "access": "public",
+    "directory": "./lib"
+  },
   "scripts": {
     "build": "run-script-os",
     "build:win32": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && xcopy /Y package.json lib",
