--- a/fern/api/generators.yml
+++ b/fern/api/generators.yml
@@ -7,3 +7,14 @@ groups:
         output:
           location: local-file-system
           path: ../../packages/server/src/api/generated
+      - name: fernapi/fern-typescript-sdk
+        version: 0.5.14
+        output:
+          location: npm
+          url: npm.buildwithfern.com
+          package-name: '@mirrorful-fern/api-client'
+      - name: fernapi/fern-postman
+        version: 0.0.44
+        output:
+          location: local-file-system
+          path: '../../packages/postman'
