--- a/fern/api/definition/registry.yml
+++ b/fern/api/definition/registry.yml
@@ -25,7 +25,7 @@ service:
 types:
   S3UrlForLibraryUploadResponse:
     properties:
-      s3UploadUrl: string
+      s3Url: string
 
   LibraryId:
     type: string
