--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "build": "tsc",
-    "start": "node lib/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "infisical run -- node lib/server.js",
+    "dev": "infisical run -- nodemon src/server.ts",
     "format": "prettier --write src/**",
     "format:check": "prettier --check src/**",
     "lint": "eslint",
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.315.0",
+    "@aws-sdk/s3-request-presigner": "^3.315.0",
     "@sentry/node": "^7.48.0",
     "aws-sdk": "^2.1360.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
