--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
     "@sentry/node": "^7.48.0",
     "aws-sdk": "^2.1360.0",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
