--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -44,6 +44,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mirrorful/core": "2.0.3",
+    "@vitejs/plugin-react": "^3.1.0",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "conf": "^10.0.2",
@@ -58,7 +59,10 @@
     "react-dom": "18.2.0",
     "rimraf": "^4.1.2",
     "update-check": "^1.5.4",
+    "url": "^0.11.0",
     "uuid": "^9.0.0",
+    "vite": "^4.2.1",
+    "vite-plugin-dts": "^2.3.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
@@ -78,7 +82,8 @@
     "pretty-quick": "^3.1.3",
     "run-script-os": "^1.1.6",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite-plugin-css-injected-by-js": "^3.1.0"
   },
   "engines": {
     "node": ">=14.6.0"
