--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -53,6 +53,7 @@
     "fs": "^0.0.1-security",
     "next": "13.2.4",
     "open": "^8.4.2",
+    "ora": "5.4.1",
     "path": "^0.12.7",
     "posthog-js": "^1.50.0",
     "react": "18.2.0",
