--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,11 +15,13 @@
     "@aws-sdk/s3-request-presigner": "^3.315.0",
     "@sentry/node": "^7.48.0",
     "aws-sdk": "^2.1360.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "latest",
