--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mirrorful-fern/api-client": "0.0.278",
     "@babel/standalone": "^7.21.4",
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mirrorful-fern/api-client": "0.0.278",
     "@monaco-editor/react": "^4.5.0",
     "@types/react-icons": "^3.0.0",
     "framer-motion": "^10.12.4",
     "monaco-editor": "^0.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
