--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"mirrorful": "^6.1.10",
+		"rollup-plugin-copy": "^3.4.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
