--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -43,13 +43,15 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mirrorful/core": "2.0.5",
     "@mirrorful-fern/api-client": "0.0.223",
+    "@mirrorful/core": "2.0.5",
     "@vitejs/plugin-react": "^3.1.0",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
     "conf": "^10.0.2",
     "cross-spawn": "^7.0.3",
+    "dts-bundle": "^0.7.3",
+    "dts-bundle-generator": "^8.0.1",
     "framer-motion": "^9.0.4",
     "fs": "^0.0.1-security",
     "next": "13.2.4",
@@ -70,6 +72,7 @@
   "devDependencies": {
     "@types/conf": "^3.0.0",
     "@types/cross-spawn": "^6.0.2",
+    "@types/dts-bundle": "^0.0.32",
     "@types/node": "^18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
