--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
