--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -27,6 +27,7 @@
     "@chakra-ui/react": "^2.5.5",
     "eslint-plugin-react": "^7.32.2",
     "mirrorful": "^6.1.10",
+    "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.0.4"
