--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -17,6 +17,7 @@
     "@mirrorful-fern/api-client": "0.0.278",
     "@monaco-editor/react": "^4.5.0",
     "@types/react-icons": "^3.0.0",
+    "axios": "^1.3.6",
     "framer-motion": "^10.12.4",
     "monaco-editor": "^0.37.1",
     "prettier": "^2.8.8",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
