--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -17,6 +17,7 @@
     "@mirrorful-fern/api-client": "0.0.278",
     "@monaco-editor/react": "^4.5.0",
     "@types/react-icons": "^3.0.0",
+    "console-feed": "^3.5.0",
     "framer-motion": "^10.12.4",
     "monaco-editor": "^0.37.1",
     "prettier": "^2.8.8",
