chore: add paths property to github action workflows

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -3,9 +3,13 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'packages/core/**'
   push:
     branches:
       - main
+    paths:
+      - 'packages/core/**'
 
 jobs:
   build:
