--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -3,9 +3,15 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'packages/core/**'
+      - 'packages/mirrorful/**'
   push:
     branches:
       - main
+    paths:
+      - 'packages/core/**'
+      - 'packages/mirrorful/**'
 
 jobs:
   build:
