--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -3,9 +3,13 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'packages/server/**'
   push:
     branches:
       - main
+    paths:
+      - 'packages/server/**'
 
 jobs:
   build:
