--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -3,9 +3,13 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'apps/web/**'
   push:
     branches:
       - main
+    paths:
+      - 'apps/web/**'
 
 jobs:
   build:
