--- a/examples/tailwind-next/.eslintrc.json
+++ b/examples/tailwind-next/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "plugin:mirrorful/recommended"],
+  "plugins": ["mirrorful"]
 }
