--- a/examples/tailwind-next/package.json
+++ b/examples/tailwind-next/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "eslint-plugin-mirrorful": "../../packages/eslint-plugin",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
