--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -43,8 +43,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mirrorful/core": "2.0.5",
     "@mirrorful-fern/api-client": "0.0.223",
+    "@mirrorful/core": "2.0.5",
     "@vitejs/plugin-react": "^3.1.0",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
@@ -82,6 +82,7 @@
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
+    "rollup-plugin-external-globals": "^0.7.3",
     "run-script-os": "^1.1.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
