chore: add paths property to github action workflows (#366)
* chore: add paths property to github action workflows

* Update .github/workflows/web.yml

---------

Co-authored-by: Teddy Ni <teddyni19@gmail.com>

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -3,9 +3,14 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'apps/web/**'
+      - 'packages/core/**'
   push:
     branches:
       - main
+    paths:
+      - 'apps/web/**'
 
 jobs:
   build:
