--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -43,8 +43,8 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mirrorful/core": "2.0.5",
     "@mirrorful-fern/api-client": "0.0.223",
+    "@mirrorful/core": "2.0.5",
     "@vitejs/plugin-react": "^3.1.0",
     "chalk": "^2.4.2",
     "commander": "^2.20.0",
@@ -73,6 +73,7 @@
     "@types/node": "^18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/rimraf": "^4.0.5",
     "@types/uuid": "^9.0.1",
     "@types/uuidv4": "^5.0.0",
     "@types/validate-npm-package-name": "^4.0.0",
