--- a/packages/mirrorful/package.json
+++ b/packages/mirrorful/package.json
@@ -64,6 +64,7 @@
     "uuid": "^9.0.0",
     "vite": "^4.2.1",
     "vite-plugin-dts": "^2.3.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
