--- a/packages/mirrorful/editor/package.json
+++ b/packages/mirrorful/editor/package.json
@@ -33,7 +33,9 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.0",
     "typescript": "4.9.5",
+    "yarn": "^1.22.19",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
