--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -65,7 +65,7 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           dir: packages/mirrorful/editor
-          cmd: lint # will run `yarn lint` command in packages/mirrorful/editor
+          cmd: lint # will run `yarn test` command in packages/mirrorful/editor
 
       - name: test packages/eslint-plugin
         uses: borales/actions-yarn@v4
