--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-mirrorful",
   "version": "0.0.0",
-  "description": "ESLint rules for Mirrorful.",
+  "description": "ESLint rules for Mirrorful projects.",
   "keywords": [
     "eslint",
     "eslintplugin",
