Creating Standard UI Components (#327)
* updated

* added chakra provider

* updated props

* removed size and added props

* created a save button

* exported save button

* created story

* created variants and added save variant

* added save button

* added props variant

* added delete button variant

* removed other labels

* added delete

* added function to capitalize

* added add token variant

* added add token button and renamed default

* created an add variant

* added add new variant story

* added icon button

* added icon button story

* created button types

* added types

* changed outline to border

* removed save button

* removed save button

* updated files

* updated button props

* renamed

* updated import

* updated

* made variant required

* updated

* imported react and added tag for docs

* created text base

* added props

* added sizes and weights to create variants

* created story

* updated

* renamed to styles and added exports

* created extra small type

* creaetd small story

* created large story

* created extra large story

* fixed order

* created types

* updated imports

* created union type

* added union type for hover

* created hover type

* added hover props

* created hover

* removed unused imports

* adjusted hover

* added hover

* updated hover story

* aded pick for bgColor and color

* added background color and color

* chose specific props to take

* added padding

* added border radius

* added padding

* added max content

* added variants

* added todo

* exported text

* moved props down

* created a todo list

* added variants props

* added checks for icons

* created error variant

* created success variant

* added inform variant

* created warning variant

* updated

* created template

* updated

* created util for capitalizing text

* imported to

--- a/packages/blocks/tsconfig.json
+++ b/packages/blocks/tsconfig.json
@@ -4,7 +4,6 @@
     "jsx": "react-jsx",
     "module": "CommonJS",
     "baseUrl": ".",
-    "rootDir": "src",
     "paths": {
       "@ui/*": ["src/*"]
     },
@@ -16,13 +15,18 @@
     "resolveJsonModule": true,
     "declaration": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "src/**/*.json"],
+  "include": ["**/*.ts", "**/*.tsx", "src/**/*.json", "**/*.d.ts"],
   "exclude": [
     "node_modules",
     "lib",
     "tsconfig.json",
-    "src/stories/**/*",
-    "src/.storybook/**/*"
+    ".storybook/**/*",
+    "**/*.stories.tsx",
+    ".babelrc.*",
+    ".eslintrc.*",
+    "README.md",
+    "yarn.*",
+    "yarn-error.*"
   ],
   "tsc-alias": {
     "verbose": true
