--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@mirrorful/ui",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "src/index.ts",
   "files": [
-    "src/**/*"
+    "lib"
   ],
+  "publishConfig": {
+    "access": "public",
+    "directory": "./lib"
+  },
   "scripts": {
     "build": "run-script-os",
     "build:win32": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json && xcopy /Y package.json lib",
@@ -22,7 +26,8 @@
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
     "eslint-plugin-react": "^7.32.2",
-    "mirrorful": "^6.1.9",
+    "mirrorful": "^6.1.10",
+    "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.0.4"
